--- a/themes/atletico/stylesheets/styles.css
+++ b/themes/atletico/stylesheets/styles.css
@@ -4884,23 +4884,90 @@ header .header__main-menu .menu--account .menu-item a {
 .view-id-games .game-list {
   background-color: #f7f7f7;
   cursor: pointer;
-  font-size: 100%;
+  font-size: 80%;
   padding-left: 1em;
 }
-/* line 42, ../sass/components/_games.scss */
+@media screen and (min-width: 40.625em) {
+  /* line 35, ../sass/components/_games.scss */
+  .view-id-games .game-list {
+    font-size: 100%;
+  }
+}
+/* line 45, ../sass/components/_games.scss */
 .view-id-games .game-list:hover {
   background-color: #f0f0f0;
 }
-/* line 46, ../sass/components/_games.scss */
+/* line 49, ../sass/components/_games.scss */
 .view-id-games .game-list:first-child {
   border-top: solid 2px #477dca;
 }
-/* line 50, ../sass/components/_games.scss */
+/* line 53, ../sass/components/_games.scss */
 .view-id-games .game-list td:first-child {
   padding-left: .5em;
 }
 
-/* line 57, ../sass/components/_games.scss */
+/* line 63, ../sass/components/_games.scss */
+.block-views-blockgames-block-2 td:first-child,
+.block-views-blockgames-block-3 td:first-child {
+  width: 15%;
+}
+/* line 68, ../sass/components/_games.scss */
+.block-views-blockgames-block-2 .views-field-field-jersey-color-html-,
+.block-views-blockgames-block-2 .views-field-field-jersey-color-html__1,
+.block-views-blockgames-block-3 .views-field-field-jersey-color-html-,
+.block-views-blockgames-block-3 .views-field-field-jersey-color-html__1 {
+  width: 1.25em;
+}
+@media screen and (min-width: 40.625em) {
+  /* line 73, ../sass/components/_games.scss */
+  .block-views-blockgames-block-2 td:first-child,
+  .block-views-blockgames-block-2 .views-field-field-jersey-color-html-,
+  .block-views-blockgames-block-2 .views-field-field-jersey-color-html__1,
+  .block-views-blockgames-block-3 td:first-child,
+  .block-views-blockgames-block-3 .views-field-field-jersey-color-html-,
+  .block-views-blockgames-block-3 .views-field-field-jersey-color-html__1 {
+    width: auto;
+  }
+}
+
+/* line 85, ../sass/components/_games.scss */
+.block-views-blockgames-block-2 .views-field-nothing {
+  width: 1.5em;
+}
+/* line 90, ../sass/components/_games.scss */
+.block-views-blockgames-block-2 .views-field-field-abbreviation-2 {
+  width: 15%;
+}
+@media screen and (min-width: 40.625em) {
+  /* line 94, ../sass/components/_games.scss */
+  .block-views-blockgames-block-2 .views-field-nothing,
+  .block-views-blockgames-block-2 .views-field-field-abbreviation-2 {
+    width: auto;
+  }
+}
+
+/* line 105, ../sass/components/_games.scss */
+.block-views-blockgames-block-3 .views-field-nothing {
+  width: 4em;
+}
+@media screen and (min-width: 40.625em) {
+  /* line 105, ../sass/components/_games.scss */
+  .block-views-blockgames-block-3 .views-field-nothing {
+    width: auto;
+  }
+}
+
+/* line 114, ../sass/components/_games.scss */
+.view-id-standings {
+  font-size: 80%;
+}
+@media screen and (min-width: 40.625em) {
+  /* line 114, ../sass/components/_games.scss */
+  .view-id-standings {
+    font-size: 100%;
+  }
+}
+/* line 121, ../sass/components/_games.scss */
 .view-id-standings .views-field-field-abbreviation {
   width: 40%;
 }
